-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.1, 5.5.0 Beta
-
None
-
-
5ef662f1af2fb0c340b98edc083939b4383a04ac
When running a Qt application on Android against Qt 5.5, you get the following error message in the console:
W/Qt A11Y ( 7669): Could not activate platform accessibility.
For Gerrit Dashboard: QTBUG-46355 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
113931,3 | Android: Delay initialization of Accessibility. | 5.5.0 | qt/qtbase | Status: MERGED | +2 | 0 |